data/collection/fixes/descriptions/java/JDK-7052782
The affected tests are:
   tools/javac/meth/InvokeMH.java
   tools/javac/meth/XlintWarn.java

These testes get compilation errors such as:
/export/home/aurora/sandbox/testbase/tools/javac/meth/InvokeMH.java:93: error: cannot find symbol
        mh_vi.invokeGeneric();
             ^
  symbol:   method invokeGeneric()
  location: variable mh_vi of type MethodHandle
     :
test result: Failed. Compilation failed: exit code 1
Actually, two CRs were involved in the change that created this issue:
   7034977: JSR 292 MethodHandle.invokeGeneric should be renamed MethodHandle.invoke [deprecated invokeGeneric]
   7032323: code changes for JSR 292 EG adjustments to API, through Public Review [removed the deprecated method]
